# MIRAGE

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  chunker.py  config.py  constants.py  database.py  embedder.py  logger.py  main.py  models.py  pyproject.toml  requirements.txt
llms/: base.py
notebooks/: 01_encoding_analysis.ipynb
pre-commit-hooks/: prevent_push.py
rag/: _simpleRAG.py  _visionRAG.py
src/model/: __init__.py
src/models/: clip.py  text_encoder.py
utilities/: async_utils.py  embeddings.py
vlms/: __init__.py
vlms/provider/: openai.py
